Fix spacing, fix colors

--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,6 @@
   color: hsl(228, 45%, 44%);
 }
 
-.container {
-  width: 70%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px black solid;
-  border-radius: 15px;
-  height: 60%;
-  box-shadow: 20px 10px 50px -20px hsla(234, 85%, 45%, 0.1);
-}
-
 .body {
   width: 100vw;
   height: 100vh;
@@ -33,9 +22,72 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 2px black solid;
 }
 
+.container {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  height: 60%;
+  box-shadow: 20px 10px 50px -20px hsla(234, 85%, 45%, 0.1);
+}
+
+.left-half {
+  width: 50%;
+  height: 100%;
+  border-radius: 20px;
+  background-color: hsl(252, 100%, 67%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.circle {
+  border: 2px solid black;
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.circle h1 {
+  font-size: 50px;
+  margin-bottom: 0px;
+}
+
+.left-half p {
+  text-align: center;
+  width: 70%;
+  color: rgb(200, 192, 255);
+}
+
+.left-half h2,
+h1 {
+  color: white;
+}
+
+.left-half h3 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.left-half h3,
+p {
+  color: rgb(200, 192, 255);
+}
+
+.left-half h2 {
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+
+.right-half {
+  width: 50%;
+}
 /******************************************
 /* LAYOUT
 /*******************************************/
